Fix navigation on mobile

--- a/_src/scss/_base.scss
+++ b/_src/scss/_base.scss
@@ -10,6 +10,7 @@ body {
   margin: 0;
   color: $default;
   background-color: $footer;
+  -webkit-text-size-adjust: 100%;
 }
 
 h1,
